--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/Syn_logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sync Insights</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
